--- a/css/style.scss
+++ b/css/style.scss
@@ -1,4 +1,5 @@
 $main: #fdc107;
+$card:  rgb(220, 211, 161);
 
 * {
     box-sizing: border-box;
@@ -25,13 +26,13 @@ footer {
 }
 
 #home {
-    background: $main;
+    background: $card
 }
 
 .container {
     .card {
         padding: 0.9375rem;
-        background: rgb(220, 211, 161);
+        background: $card;
         border-radius: 0.625rem;
     }
 }
